Fix homepage spacing

--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -114,11 +114,11 @@ margin-top: -18px;
 
 .pagination {
   margin:0px 0px -5px 0px;
-  padding-top:3px;
+  padding-top:4px;
 }
 /* Required for jQuery Masonry */
 .box {
-    padding:1px 1px 0 0;
+    padding:1px 1px 1px 0;
     float: left;
     /*-webkit-border-radius: 5px;
     -moz-border-radius: 5px;*/
